[package]
name = "x264-dev"
version = "0.1.0"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
keywords = ["video"]
description = "Rust bindings to libx264."
license = "MIT"
homepage = "https://github.com/imager-io/x264-dev"
repository = "https://github.com/imager-io/x264-dev"

[dependencies]
libc = "^0.2"

[build-dependencies]
tar = "0.4.26"
flate2 = "1.0.12"
bindgen = "0.50"
glob = "0.3.0"
