[package]
name = "x264-dev"
version = "0.1.1"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
keywords = ["video", "x264", "h264", "avc"]
description = "Rust bindings to libx264."
license = "MIT"
homepage = "https://github.com/imager-io/x264-dev"
repository = "https://github.com/imager-io/x264-dev"
readme = "README.md"
links = "x264"

[dependencies]
libc = "^0.2"

[build-dependencies]
tar = "0.4.26"
flate2 = "1.0.12"
bindgen = "0.50"
glob = "0.3.0"
num_cpus = "1.11.1"
